# TasksAPP-Backend

./: .dockerignore  .gitignore  Dockerfile  README.md  dependencies.py  main.py  models.py  pyproject.toml  render.yaml  requirements.txt  schemas.py  tasks.db
backend/: main.py  models.py  schemas.py
frontend/: Webpack.config.js  package-lock.json  package.json
frontend/src/: App.js
frontend/src/components/: CreateTaskPage.js  DisplayTaskPage.js  EditTaskPage.js  FilterPage.js  MainPage.js
